<resources>
    <string name="app_name">ShareIt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Take your memories to the sky...</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="alreadyuser">Already a user? Log In</string>
    <string name="new_user">New user? Sign In</string>
    <string name="pick_image">Pick Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="share">Share</string>
    <string name="contact_name">Shivdas Manwar</string>
    <string name="username">Username</string>
</resources>